<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/poster"
        android:src="@drawable/esb"
        android:maxHeight="80dp"
        android:maxWidth="80dp"
        android:adjustViewBounds="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/titlePlaceholder"
        android:id="@+id/item_title"
        android:layout_toRightOf="@+id/poster" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/shortPlotPlaceholder"
        android:id="@+id/item_short_plot"
        android:layout_below="@+id/poster"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/yearPlaceholder"
        android:id="@+id/item_year"
        android:layout_below="@+id/ratingText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/ratingPlaceholder"
        android:id="@+id/ratingText"
        android:layout_marginTop="45dp"
        android:layout_below="@+id/item_short_plot"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listRatingBar"
        android:layout_below="@+id/item_year"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>